fix bug: added price_int for filter function

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 email:
   from:
-    username: tommy0625tung
+    username: tommy0625tung@hotmail.com
     password: tifa2056
   to:
     username: chen0625tung@gmail.com
