--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,37 @@
+aioflask==0.4.0
 appdirs==1.4.4
+asgiref==3.5.0
+async==0.6.2
 beautifulsoup4==4.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
+docstring-to-markdown==0.10
 Flask==2.1.1
+greenlet==1.1.2
+greenletio==0.9.0
+h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
+jedi==0.18.1
+jedi-language-server==0.35.1
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+parso==0.8.3
+pydantic==1.8.2
 pyee==8.2.2
+pygls==0.11.3
 pyppeteer==1.0.2
 PyYAML==6.0
 requests==2.27.1
 schedule==1.1.0
 soupsieve==2.3.2.post1
 tqdm==4.64.0
+typeguard==2.13.3
 typing_extensions==4.1.1
 urllib3==1.26.9
+uvicorn==0.17.6
 websockets==10.2
 Werkzeug==2.1.1
 zipp==3.8.0
