--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ docstring-to-markdown==0.10
 Flask==2.1.1
 greenlet==1.1.2
 greenletio==0.9.0
+gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.3
