--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ beautifulsoup4==4.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
+colorama==0.4.6
 docstring-to-markdown==0.10
 Flask==2.1.1
 greenlet==1.1.2
